<resources>
    <string name="app_name">&appName;</string>
    <string name="app_logo_alt">&companyName; Logo</string>
    <string name="about_logged_in">Logged in as: %1$s</string>
    <string name="about_not_logged_in">Not logged in</string>
    <string name="menu_download">Download Courses</string>
    <string name="menu_change_text_size">Change text size</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_privacy">Privacy and Your Data</string>
    <string name="menu_about">About and Help</string>
    <string name="menu_help">Help</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_read_aloud">Read aloud</string>
    <string name="menu_return_to_courses">Return to courses</string>
    <string name="menu_scorecard">Scorecard</string>
    <string name="menu_search">Search</string>
    <string name="menu_stop_read_aloud">Stop reading</string>
    <string name="menu_sort_by">Sort by</string>
    <string name="menu_sort_by_course">Sort by course</string>
    <string name="menu_sort_by_filename">Sort by filename</string>
    <string name="menu_select_all">Select all</string>
    <string name="service_tracker">&appName; Tracker Service</string>
    <string name="fragment_welcome_title">Welcome to &appName;</string>
    <string name="fragment_welcome_desc">&appName; is a mobile learning platform for delivering learning content, video and quizzes.\n\n\'Oppia\' means \'to learn\' in Finnish</string>
    <string name="fragment_welcome_login_info">To get started with &appName;, you will need to register or login.</string>
    <string name="fragment_welcome_privacy_info">By registering or logging in, you agree to our <a href="">Privacy Policy and Terms of Service</a>.</string>
    <string name="fragment_welcome_powered_by">Powered by <a href="https://digital-campus.org/oppiamobile/">OppiaMobile</a></string>
    <string name="drawer_header_background_description">Background image</string>
    <string name="drawer_header_logo_description">&appName; logo</string>
    <string name="drawer_header_username_placeholder">User name</string>
    <string name="drawer_header_userfullname_placeholder">User full name</string>
    <string name="tab_title_about">About</string>
    <string name="tab_title_badges">Badges</string>
    <string name="tab_title_help">Help</string>
    <string name="tab_title_login">Login</string>
    <string name="tab_title_points">Points</string>
    <string name="tab_title_privacy">Privacy Policy</string>
    <string name="tab_title_terms">Terms of Service</string>
    <string name="tab_title_register">Register</string>
    <string name="tab_title_reset_password">Reset Password</string>
    <string name="tab_title_remember_username">Forgotten username</string>
    <string name="tab_title_scorecard">Scorecard</string>
    <string name="tab_title_activity">Activity</string>
    <string name="tab_title_welcome">Welcome</string>
    <string name="title_about">About and Help</string>
    <string name="title_baseline">Baseline</string>
    <string name="title_btn_reset_password">Reset password</string>
    <string name="title_btn_remember_username">Forgotten username</string>
    <string name="title_download_activity">Manage courses</string>
    <string name="title_activity_course_index">Course Index</string>
    <string name="title_activity_course">Activity</string>
    <string name="title_course_meta">About</string>
    <string name="title_prefs">Settings</string>
    <string name="title_scorecard">Scorecard</string>
    <string name="title_tag_select_activity">Select Category</string>
    <string name="version">Version: %1$s</string>
    <string name="title_download_media">Download Media</string>
    <string name="widget_feedback_submit">Submit</string>
    <string name="widget_feedback_submit_title">Thank you for submitting your feedback.</string>
    <string name="widget_feedback_unavailable_attempts">You have already sent your feedback</string>
    <string name="widget_quiz_next">Next</string>
    <string name="widget_quiz_prev">Prev</string>
    <string name="widget_quiz_getresults">Get Results</string>
    <string name="widget_quiz_noanswergiven">Please give an answer before moving to the next question</string>
    <string name="widget_quiz_progress">Question %1$d of %2$d</string>
    <string name="widget_quiz_results_score">You scored: %1$.0f%%</string>
    <string name="widget_quiz_results_restart">Retake this quiz</string>
    <string name="widget_quiz_continue">Continue &gt;&gt;</string>
    <string name="widget_quiz_baseline_completed">Thank you for completing the pre-test. You can now continue to the course.</string>
    <string name="widget_quiz_baseline_goto_course">Continue to course &gt;&gt;</string>
    <string name="widget_quiz_image_caption">Press the image to view larger version</string>
    <string name="widget_quiz_media_caption">Press the image to start the video</string>
    <string name="widget_quiz_feedback_response_title">You answered: </string>
    <string name="widget_quiz_feedback_response_skipped">You skipped this question.</string>
    <string name="widget_quiz_feedback_feedback_title">Feedback: </string>
    <string name="widget_quiz_num_questions">%1$d questions</string>
    <string name="widget_quiz_pass_threshold">%1$d%% pass threshold </string>
    <string name="widget_quiz_unavailable_section">You must complete all the previous activities in this section before this quiz becomes available to you.</string>
    <string name="widget_quiz_unavailable_course">You must complete all the previous activities in this course before this quiz becomes available to you.</string>
    <string name="widget_quiz_unavailable_attempts">You have already attempted this quiz the max number of times allowed</string>
    <string name="widget_resource_open_file">Open \'%1$s\'</string>
    <string name="course_context_reset">Reset</string>
    <string name="course_context_delete">Delete</string>
    <string name="course_context_update_activity">Update activity</string>
    <string name="course_context_reset_confirm">Are you sure you want to reset this course? It will remove all the progress logs for this course.</string>
    <string name="course_context_delete_confirm">Are you sure you want to delete this course? It will completely remove the course from your phone.</string>
    <string name="no_courses">There are no courses currently installed</string>
    <string name="more_courses">Download more courses</string>
    <string name="prefCurrentVersion">Current version: %1$s</string>
    <string name="prefAdvanced">Advanced settings</string>
    <string name="prefBackgroundDataConnect">Background activity tracker</string>
    <string name="prefBackgroundDataConnect_summary">Send activity logs even when this application isn\'t running</string>
    <string name="prefContentLanguage">Preferred content language</string>
    <string name="prefInterfaceLanguage">Interface language</string>
    <string name="prefHighlightCompleted">Highlight completed activities</string>
    <string name="prefServer">Server</string>
    <string name="prefServer_notChecked">Unchecked URL</string>
    <string name="prefServer_errorTitle">Invalid URL</string>
    <string name="prefServer_errorDescription">Please, enter a well-formed URL corresponding to your &appName;
        server endpoint</string>
    <string name="prefServerTimeoutConnection">Connection timeout</string>
    <string name="prefServerTimeoutResponse">Response timeout</string>
    <string name="prefServerIncompatible">Incompatible version (older)</string>
    <string name="prefInt_errorTitle">Invalid value</string>
    <string name="prefInt_errorDescription">Please, enter a valid integer value</string>
    <string name="prefShowCourseDescription">Show course description</string>
    <string name="prefShowProgressBar">Show progress bar</string>
    <string name="prefShowSectionNumbers">Show section numbers</string>
    <string name="prefTextSize">Text size</string>
    <string name="prefUser">Username</string>
    <string name="prefUserHint">(read only)</string>
    <string name="prefLogoutEnabled">Enable logout from homepage</string>
    <string name="prefDeleteCourseEnabled">Enable deleting of courses</string>
    <string name="prefDisableNotifications">Disable notifications</string>
    <string name="prefNotifications_title">Notifications</string>
    <string name="prefSecurity_title">Security</string>
    <string name="prefAdvanced_title">Advanced</string>
    <string name="prefDisplay_title">Display</string>
    <string name="prefNotifications_description">System notifications and in-app gamification messages</string>
    <string name="prefSecurity_description">Admin protection of special actions and enabling/disabling certain functionalities from the screen</string>
    <string name="prefAdvanced_description">More advanced/technical settings</string>
    <string name="prefDisplay_description">Control how courses and contents are displayed</string>
    <string name="prefAdminProtection">Protect admin actions with password</string>
    <string name="prefAdminPassword">Change admin password</string>
    <string name="prefRemoteAdminEnabled">Enable remote administration of the device</string>
    <string name="prefSectionSystemNotifs">System notifications</string>
    <string name="prefStartCourseIndexCollapsed">Start course index with sections collapsed</string>
    <string name="storageAccess_help1">Since Android 5 (Lollipop) there is a new official way for apps to write to the external SD card. Apps must ask the user to grant write access to a folder on the SD card. A system folder chooser dialog will open, and you will need to select the SD card from there.</string>
    <string name="storageAccess_help2">If the dialog appears empty and there are no items in the left drawer, you first need to go to the menu and tell the system to show the SD card.</string>
    <string name="storageAccess_help3">Then, tap on the SD card from the list on the left side to display its folder structure. In this screenshot you see both \"Internal storage\" and the SD card. The SD card can be displayed under a different name then what you see here, for example \"Kingston\". It\'s the so called disk label of the card.</string>
    <string name="storageAccess_help4">Then select the card. Don\'t navigate down into any subfolder. You must select the top-level root folder of the SD card. This is important.</string>
    <string name="storageAccess_help5">After tapping the \"Select SD card\" button you should be back in the app. The app double checks if it now indeed can write to the SD card, and if the folder selected is the root one.</string>
    <string name="title_login">Login</string>
    <string name="login_password_title">Password</string>
    <string name="title_register">Register</string>
    <string name="register_form_email_title">Email address</string>
    <string name="reset_password_field">Username or Email</string>
    <string name="reset_password_description">Please enter your username or email below and you will be sent an email with a link to reset your password.</string>
    <string name="remember_username_description">Please enter your email below and you will be sent an email with a reminder of your username.</string>
    <string name="reset_password">Reset password</string>
    <string name="admin_password_required">This feature is protected for admin use only. Please enter the admin password to continue:</string>
    <string name="admin_password_error_incorrect_password">Incorrect admin password. Try again</string>
    <string name="menu_sync">Synchronise</string>
    <string name="last_year">last year</string>
    <string name="last_month">last month</string>
    <string name="last_week">last week</string>
    <string name="collapse_all_sections">Collapse all sections</string>
    <string name="expand_all_sections">Expand all sections</string>
</resources>