<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/drawer_menu_main" android:checkableBehavior="none"> <!--android:checkableBehavior="single"-->
        <item
            android:id="@+id/menu_download"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_download"/>
        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/abs__ic_search"
            android:title="@string/menu_search"/>

        <item
            android:id="@+id/menu_language"
            android:icon="@drawable/ic_menu_start_conversation"
            android:title="@string/menu_language"/>
        <item
            android:id="@+id/menu_scorecard"
            android:icon="@drawable/ic_scorecard"
            android:title="@string/menu_scorecard"/>

    </group>

    <group android:id="@+id/drawer_menu_secondary">
        <item
            android:id="@+id/menu_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings"/>
        <item
            android:id="@+id/menu_sync"
            android:icon="@drawable/ic_cached"
            android:title="@string/menu_sync"/>
        <item
            android:id="@+id/menu_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about"/>
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_action_logout"
            android:title="@string/menu_logout"/>
    </group>
</menu>