<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:oppiamobile="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_scorecard"
        android:icon="@drawable/ic_nav_scorecard"
        oppiamobile:showAsAction="always"
        android:title="@string/menu_scorecard"/>
    <item
        android:id="@+id/points"
        oppiamobile:showAsAction="always"
        oppiamobile:actionLayout="@layout/menu_points"
        android:title=""/>
    <item
        android:id="@+id/menu_expand_all_sections"
        android:icon="@drawable/ic_expand_sections"
        oppiamobile:showAsAction="never"
        android:title="@string/expand_all_sections"/>
    <item
        android:id="@+id/menu_collapse_all_sections"
        android:icon="@drawable/ic_collapse_sections"
        oppiamobile:showAsAction="never"
        android:title="@string/collapse_all_sections"/>
    <item
        android:id="@+id/menu_language"
        android:icon="@drawable/ic_menu_start_conversation"
        android:title="@string/menu_language"/>
    <item
        android:id="@+id/menu_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/menu_help"/>

</menu>