<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="main_prefs_fragment">

    <Preference
        app:fragment="org.digitalcampus.oppia.fragments.prefs.DisplayPrefsFragment"
        app:title="@string/prefDisplay_title"
        app:key="prefDisplay"
        app:icon="@drawable/ic_notification"
        />

    <Preference
        app:fragment="org.digitalcampus.oppia.fragments.prefs.NotificationsPrefsFragment"
        app:title="@string/prefNotifications_title"
        app:key="prefNotifications"
        app:icon="@drawable/ic_notification"
    />

    <Preference
        app:fragment="org.digitalcampus.oppia.fragments.prefs.SecurityPrefsFragment"
        app:title="@string/prefSecurity_title"
        app:key="prefSecurity"
        app:icon="@drawable/ic_notification"
        />

    <Preference
        app:fragment="org.digitalcampus.oppia.fragments.prefs.AdvancedPrefsFragment"
        app:title="@string/prefAdvanced_title"
        app:key="prefAdvanced"
        app:icon="@drawable/ic_notification"
        />

</androidx.preference.PreferenceScreen>
