<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_large"
        android:paddingTop="@dimen/listitem_icon_size"
        android:paddingRight="@dimen/padding_large">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:srcCompat="@drawable/brand_icon"/>

        <TextView
            android:id="@+id/welcome_title"
            style="@style/HeaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/fragment_welcome_title"/>

        <TextView
            android:id="@+id/welcome_desc"
            style="@style/NormalTextDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/fragment_welcome_desc"/>

        <TextView
            android:id="@+id/welcome_login_info"
            style="@style/SubheaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:text="@string/fragment_welcome_login_info"/>

        <Button
            android:id="@+id/welcome_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/title_register"
            android:theme="@style/PrimaryButton"/>

        <Button
            android:id="@+id/welcome_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:text="@string/title_login"/>

        <TextView
            android:id="@+id/welcome_powered_by"
            style="@style/SubheaderText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:text="@string/fragment_welcome_powered_by"/>
    </LinearLayout>

</ScrollView>