<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ap="http://schemas.android.com/tools"
    android:orientation="vertical">

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs_filter_points"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:tabGravity="center"
        app:tabTextColor="@color/text_grey"
        app:tabSelectedTextColor="@color/ap_white"
        app:tabBackground="@drawable/bg_tab_text"
        app:tabTextAppearance="@style/TabLayoutAppearance"
        app:tabIndicatorHeight="0dp">

        <android.support.design.widget.TabItem
            android:id="@+id/tab_last_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_year" />

        <android.support.design.widget.TabItem
            android:id="@+id/tab_last_month"
            style="@style/TabText"
            android:text="@string/last_month"/>

        <android.support.design.widget.TabItem
            android:id="@+id/tab_last_week"
            style="@style/TabText"
            android:text="@string/last_week"/>

    </android.support.design.widget.TabLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_activity_types"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>

</LinearLayout>